analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/delegatedPropertyWithAccessors.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE_K1

var lazy<caret>Prop by lazy { setOf("zzz") }
    private get
    internal set
